# pg-taskq

./: .dir-locals.el  .gitignore  Cargo.toml  README.md  justfile
examples/: test-it.rs
examples/producer-worker-example/: Cargo.toml  README.md
examples/producer-worker-example/src/: main.rs  producer.rs  shared.rs  supervisor.rs  worker.rs
src/: error.rs  helper.rs  lib.rs  setup.rs  tables.rs  task.rs  task_type.rs  worker.rs
tests/: simple-task.rs
