[package]
name = "pg-taskq"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6", features = ["postgres", "macros", "uuid", "chrono", "json", "offline"] }
thiserror = "1.0.37"
tokio = { version = "1.18.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
uuid = { version = "1.2", features = ["serde", "v4"] }

[dev-dependencies]
clap = "3"
ctrlc = "3.2.2"
dotenv = "0.15.0"
pg-test-utilities = { git = "https://github.com/rksm/pg-test-utilities.git" }

[features]
default = ["native-tls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]
