[package]
name = "producer-worker-example"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres", "macros", "uuid", "chrono", "json", "offline"] }
tokio = { version = "1.18.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3.2.2"
dotenv = "0.15.0"
pg-setup = { version = "0.1.1", features = ["sqlx"] }
# pg-setup = { path = "../../../pg-setup", features = ["sqlx"] }
pg-taskq = { version = "^0.1.0", path = "../../" }
anyhow = "1.0.71"
uuid = "1.3.3"

[features]
default = ["native-tls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]
